[project]
authors = [
  {name = "Anaïs Rat", email = "anais.rat@cnrs.fr"},
]
name = "telomeres"
requires-python = ">= 3.12"
version = "0.1.0"
dependencies = [
  "numpy>=2.3.3,<3",
  "scipy>=1.16.2,<2",
  "matplotlib>=3.10.6,<4",
  "pandas>=2.3.2,<3",
  "cma>=4.3.0,<5",
  "seaborn>=0.13.2,<0.14",
  "pre-commit>=4.3.0,<5",
  "latex>=0.7.0,<0.8",
  "mpl-axes-aligner>=1.3,<2",
  "psutil>=7.0.0,<8",
  "openpyxl>=3.1.5,<4",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
telomeres = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.ruff.lint]
extend-select = ["NPY"]
